AM_CPPFLAGS = -DDEBUG_NAMESPACE='"libggi.default.iplanar_2p"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
libiplanar_2p_la_LIBADD =

noinst_LTLIBRARIES = libiplanar_2p.la

libiplanar_2p_la_SOURCES = pixel.c pixela.c visual.c

EXTRA_DIST = EXPSYMS ipl2lib.h

MAINTAINERCLEANFILES = Makefile.in

