AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_1"'
INCLUDES = -I$(top_srcdir)/include
liblinear_1_la_LIBADD =

noinst_LTLIBRARIES = liblinear_1.la

liblinear_1_la_SOURCES = color.c gtext.c hline.c pixel.c pixela.c \
	visual.c vline.c

EXTRA_DIST = EXPSYMS lin1lib.h

MAINTAINERCLEANFILES = Makefile.in

