AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_16"'
INCLUDES = -I$(top_srcdir)/include
liblinear_16_la_LIBADD =

noinst_LTLIBRARIES = liblinear_16.la

liblinear_16_la_SOURCES = box.c copybox.c crossblit.c hline.c line.c pixel.c \
	pixela.c visual.c vline.c

EXTRA_DIST = EXPSYMS lin16lib.h

MAINTAINERCLEANFILES = Makefile.in

