AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_1_r"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
liblinear_1_r_la_LIBADD =

noinst_LTLIBRARIES = liblinear_1_r.la

liblinear_1_r_la_SOURCES = gtext.c pixel.c pixela.c visual.c

EXTRA_DIST = EXPSYMS lin1rlib.h

MAINTAINERCLEANFILES = Makefile.in

