AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_1_r"'
INCLUDES = -I$(top_srcdir)/include
liblinear_1_r_la_LIBADD =

noinst_LTLIBRARIES = liblinear_1_r.la

liblinear_1_r_la_SOURCES = color.c gtext.c hline.c pixel.c pixela.c \
	visual.c vline.c

EXTRA_DIST = EXPSYMS lin1rlib.h

MAINTAINERCLEANFILES = Makefile.in

