AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_2"'
INCLUDES = -I$(top_srcdir)/include
liblinear_2_la_LIBADD =

noinst_LTLIBRARIES = liblinear_2.la

liblinear_2_la_SOURCES = color.c hline.c pixel.c pixela.c \
	visual.c vline.c

EXTRA_DIST = EXPSYMS lin2lib.h

MAINTAINERCLEANFILES = Makefile.in

