AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_24"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
liblinear_24_la_LIBADD =

noinst_LTLIBRARIES = liblinear_24.la

liblinear_24_la_SOURCES = box.c crossblit.c copybox.c hline.c pixel.c pixela.c \
	visual.c vline.c

EXTRA_DIST = EXPSYMS lin24lib.h

MAINTAINERCLEANFILES = Makefile.in

