AM_CPPFLAGS = -DDEBUG_NAMESPACE='"libggi.default"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
liblinear_4_la_LIBADD =

noinst_LTLIBRARIES = liblinear_4.la

liblinear_4_la_SOURCES = color.c copybox.c hline.c pixel.c pixela.c visual.c \
	vline.c

EXTRA_DIST = EXPSYMS lin4lib.h

MAINTAINERCLEANFILES = Makefile.in

