AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_4_r"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
liblinear_4_r_la_LIBADD =

noinst_LTLIBRARIES = liblinear_4_r.la

liblinear_4_r_la_SOURCES = color.c copybox.c hline.c pixel.c pixela.c visual.c \
	vline.c

EXTRA_DIST = EXPSYMS lin4rlib.h

MAINTAINERCLEANFILES = Makefile.in

