AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.linear_8"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
liblinear_8_la_LIBADD =

noinst_LTLIBRARIES = liblinear_8.la

liblinear_8_la_SOURCES = box.c copybox.c crossblit.c gtext.c hline.c line.c \
	pixela.c pixel.c visual.c vline.c

EXTRA_DIST = EXPSYMS lin8lib.h

MAINTAINERCLEANFILES = Makefile.in

