AM_CPPFLAGS += -DDEBUG_NAMESPACE='"libggi.default.text32"'
INCLUDES = -I$(top_srcdir)/include $(extra_includes)
libtext_32_la_LIBADD =

noinst_LTLIBRARIES = libtext_32.la

libtext_32_la_SOURCES = color.c gtext.c pixel.c pixela.c visual.c

EXTRA_DIST = EXPSYMS t32lib.h

MAINTAINERCLEANFILES = Makefile.in

